tests/externInfo/dhrystone-exported/db/invalid/path/Func3.c.ttp
./db/invalid/path/Func3.c : 66.27-66.36 : -- value at line 68, column 20 --# # EnumParIn ; signed int ; {2} /\ != 0#EnumParIn:u_char ; unsigned char ; [0, 255]#EnumParIn@2:u_char ; unsigned char ; [0, 255]#EnumParIn@1:u_char ; unsigned char ; [0, 255]#EnumParIn@3:u_char ; unsigned char ; [0, 255]# 
./db/invalid/path/Func3.c : 70.8-70.15 : -- value at line 70, column 8 --# #                                   EnumLoc ; signed int ; [-2147483648, 2147483647]#  #-- value at line 71, column 8 --# #                                     EnumLoc:u_char ; unsigned char ; [0, 255]#EnumLoc@2:u_char ; unsigned char ; [0, 255]#EnumLoc@3:u_char ; unsigned char ; [0, 255]#EnumLoc@1:u_char ; unsigned char ; [0, 255]#EnumLoc ; signed int ; {2} /\ != 0# 
./db/invalid/path/Func3.c : 70.18-70.27 : -- value at line 70, column 8 --# # EnumParIn ; signed int ; {2} /\ != 0#EnumParIn:u_char ; unsigned char ; [0, 255]#EnumParIn@2:u_char ; unsigned char ; [0, 255]#EnumParIn@1:u_char ; unsigned char ; [0, 255]#EnumParIn@3:u_char ; unsigned char ; [0, 255]#  #-- value at line 71, column 8 --# # EnumParIn ; signed int ; {2} /\ != 0#EnumParIn:u_char ; unsigned char ; [0, 255]#EnumParIn@2:u_char ; unsigned char ; [0, 255]#EnumParIn@1:u_char ; unsigned char ; [0, 255]#EnumParIn@3:u_char ; unsigned char ; [0, 255]# 
./db/invalid/path/Func3.c : 71.12-71.19 : -- value at line 71, column 8 --# #                                   EnumLoc:u_char ; unsigned char ; [0, 255]#EnumLoc@2:u_char ; unsigned char ; [0, 255]#EnumLoc@3:u_char ; unsigned char ; [0, 255]#EnumLoc@1:u_char ; unsigned char ; [0, 255]#EnumLoc ; signed int ; {2} /\ != 0#  #-- value at line 71, column 32 --# #                                      EnumLoc:u_char ; unsigned char ; [0, 255]#EnumLoc@2:u_char ; unsigned char ; [0, 255]#EnumLoc@3:u_char ; unsigned char ; [0, 255]#EnumLoc@1:u_char ; unsigned char ; [0, 255]#EnumLoc ; signed int ; {2} /\ != 0# 
